# fpga-emu-test

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
formal/: test.sby
rtl/: binary_counter.v  binary_counter_tb.v  dual_priority_encoder.v  hex_to_seven_seg.v  mod_n_counter.v  priority_encoder.v  rising_edge_detect.v  shift_reg.v  sign_magnitude_adder.v  square_wave_gen.v  sseg_time_mux.v  top.v
sim/: main.cpp  misc.h  misc_fpga.h  misc_fpga_emu.h  misc_ncurses.h
